fix: fix slider display on mobile devices

--- a/src/components/Styles/App.css
+++ b/src/components/Styles/App.css
@@ -35,13 +35,13 @@ body {
 
   /* Increase flexibility for Swiper slides */
   .swiper-slide {
-    width: auto !important;
-    margin-right: 10px; 
+    width: 200px !important;
   }
 
   /* Make project cards full width */
   .card1 {
-    width: 100%;
+    width: 200px;
+    height: 250px;
     margin-left: 2px !important; 
     margin-right: 10px !important;  
   }
@@ -81,11 +81,6 @@ body {
     padding-left: 10px;
     text-align: center;
     
-  }
-
-  .footer img {
-    width: 100%;
-    height: 200px;
   }
   
 }
